Making width -> max-width to avoid scroll bar on small screens

--- a/wsgi/cookbook/public/scss/pages/_recipe.scss
+++ b/wsgi/cookbook/public/scss/pages/_recipe.scss
@@ -23,7 +23,7 @@
 
 .recipe-description {
   font-style: italic;
-  width: 400px;
+  max-width: 400px;
 }
 
 .recipe-section-heading {
